# backend-ii

session1/: README.md  challenge.py  exercise.py
session11/: README.md  challenge.py  exercise.py  pyproject.toml
session13/: pyproject.toml
session14/test_crewai/: README.md  pyproject.toml
session14/test_crewai/latest_ai_flow/: pyproject.toml
session14/test_crewai/latest_ai_flow/src/latest_ai_flow/crews/content_crew/: content_crew.py
session14/test_crewai/src/test_crewai/: crew.py  main.py
session14/test_crewai/src/test_crewai/config/: agents.yaml  tasks.yaml
session2/: README.md  challenge.py  exercise.py
session2/src/api/: main.py  models.py
session2/src/api/payments/: adapter.py  factory.py  providers.py
session3/: README.md  challenge.py  exercise.py  main.py  pyproject.toml
session4/: README.md  challenge.py  exercise.py
session5/: README.md  challenge.py  exercise.py  pyproject.toml
session7/: README.md  challenge.py  exercise.py
session9/: pyproject.toml
session9/shop/: README.md  manage.py  requirements.txt
session9/shop/orders/: models.py  tests.py  urls.py  views.py
session9/shop/products/: models.py  tests.py  urls.py  views.py
session9/shop/shop/: settings.py  urls.py
tests/challenge/: controlador.py  main.py  pyproject.toml  vista.py
tests/challenge/tests/: test_controlador.py
tests/exercicio_1/: pyproject.toml
tests/tutorial/: main.py  pyproject.toml  test_main.py
