[project]
name = "test_crewai"
version = "0.1.0"
description = "test_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
]

[project.scripts]
test_crewai = "test_crewai.main:run"
run_crew = "test_crewai.main:run"
train = "test_crewai.main:train"
replay = "test_crewai.main:replay"
test = "test_crewai.main:test"
run_with_trigger = "test_crewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
